--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
   <body>
     <header class="page-header">
       <div class="container">
-      mykyta.kornieiev@cleveroad.com
+      <a class="header-email" href="mailto:mykyta.kornieiev@cleveroad.com">mykyta.kornieiev@cleveroad.com</a>
+    <a class="header-phone" href="tel:+380667032628">+38 066 703 26 28</a>
     </div>
     </header>
+
+
 
     <section class="hero-image">
       <div class="container">
@@ -24,6 +27,9 @@
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+  <img src="files/berlin.jpg" height="536" alt="Фотография Mykyta Kornieiev">
+</figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
@@ -34,9 +40,12 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+      <figure class="project-image">
+  <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+</figure>
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
+      <p><a class="button" href="source/project/index.html">Открыть страницу</a></p>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
@@ -45,7 +54,8 @@
 
     <footer class="page-footer">
       <div class="container">
-      mykyta.kornieiev@cleveroad.com
+      <a class="footer-email" href="mailto:mykyta.kornieiev@cleveroad.com">mykyta.kornieiev@cleveroad.com</a>
+    <a class="footer-phone" href="tel:+380667032628">+38 066 703 26 28</a>
     </div>
     </footer>
   </body>
